--- a/evm/Cargo.toml
+++ b/evm/Cargo.toml
@@ -21,14 +21,11 @@ hex-literal = "0.4.1"
 itertools = "0.11.0"
 keccak-hash = "0.10.0"
 log = "0.4.14"
-plonky2_maybe_rayon = { path = "../maybe_rayon" }
 num = "0.4.0"
 num-bigint = "0.4.3"
 once_cell = "1.13.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
-plonky2 = { path = "../plonky2", default-features = false, features = ["timing"] }
-plonky2_util = { path = "../util" }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rlp = "0.5.1"
@@ -38,6 +35,11 @@ static_assertions = "1.1.0"
 hashbrown = { version = "0.14.0" }
 tiny-keccak = "2.0.2"
 serde_json = "1.0"
+
+# Local dependencies
+plonky2 = { version = "0.2.0", path = "../plonky2", default-features = false, features = ["timing"] }
+plonky2_util = { version = "0.2.0", path = "../util" }
+plonky2_maybe_rayon = { version = "0.2.0", path = "../maybe_rayon" }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.5.0"
