--- a/plonky2/Cargo.toml
+++ b/plonky2/Cargo.toml
@@ -24,16 +24,18 @@ hashbrown = { version = "0.14.0", default-features = false, features = ["ahash",
 itertools = { version = "0.11.0", default-features = false }
 keccak-hash = { version = "0.8.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
-plonky2_maybe_rayon = { path = "../maybe_rayon", default-features = false }
 num = { version = "0.4", default-features = false, features = ["rand"] }
-plonky2_field = { path = "../field", default-features = false }
-plonky2_util = { path = "../util", default-features = false }
 rand = { version = "0.8.4", default-features = false }
 rand_chacha = { version = "0.3.1", optional = true, default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
 serde_json = "1.0"
 static_assertions = { version = "1.1.0", default-features = false }
 unroll = { version = "0.1.5", default-features = false }
+
+# Local dependencies
+plonky2_maybe_rayon = { version = "0.2.0", path = "../maybe_rayon", default-features = false }
+plonky2_field = { version = "0.2.0", path = "../field", default-features = false }
+plonky2_util = { version = "0.2.0", path = "../util", default-features = false }
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
 getrandom = { version = "0.2", default-features = false, features = ["js"] }
