--- a/plonky2/Cargo.toml
+++ b/plonky2/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 default = ["gate_testing", "parallel", "rand_chacha", "std", "timing"]
 gate_testing = []
 parallel = ["hashbrown/rayon", "plonky2_maybe_rayon/parallel"]
-std = ["anyhow/std", "rand/std", "itertools/use_std"]
+std = ["anyhow/std", "rand/std", "itertools/use_std", "plonky2_field/std"]
 timing = ["std", "dep:web-time"]
 
 [dependencies]
